--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "description": "",
   "dependencies": {
     "express": "^5.1.0",
-    "nanoid": "^5.1.5"
+    "express-handlebars": "^8.0.3",
+    "nanoid": "^5.1.5",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
