--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "^5.1.0",
     "express-handlebars": "^8.0.3",
+    "mongoose": "^8.16.1",
     "nanoid": "^5.1.5",
     "socket.io": "^4.8.1"
   },
